--- a/src/components/Rating/Rating.module.scss
+++ b/src/components/Rating/Rating.module.scss
@@ -56,34 +56,35 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 32px;
-
-    .dot {
-      height: 51px;
-      width: 51px;
-      background: #262e38;
-      border-radius: 50%;
-      display: inline-block;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-weight: 700;
-      font-size: 16px;
-      line-height: 24px;
-      text-align: center;
-      letter-spacing: 0.2px;
-      color: #7c8798;
-      cursor: pointer;
-      &:hover {
-        color: #ffffff;
-        background: #7c8798;
-      }
-      &:focus {
-        background-color: #fc7614;
-        color: #ffffff;
-      }
-      &:active {
-        transform: scale(0.98);
-      }
+  }
+  .dot,
+  .star {
+    height: 51px;
+    width: 51px;
+    background: #262e38;
+    border-radius: 50%;
+    display: inline-block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    letter-spacing: 0.2px;
+    color: #7c8798;
+    cursor: pointer;
+    &:hover {
+      color: #ffffff;
+      background: #7c8798;
     }
+    &:focus {
+      background-color: #fc7614;
+      color: #ffffff;
+    }
+    &:active {
+      transform: scale(0.98);
+    }
+    margin-bottom: 30px;
   }
 }
