--- a/src/components/Rating/Rating.module.scss
+++ b/src/components/Rating/Rating.module.scss
@@ -22,35 +22,6 @@
     color: #969fad;
     margin-bottom: 24px;
   }
-  .button {
-    background: #fc7614;
-    border-radius: 22.5px;
-    font-family: 'Overpass';
-    padding: 15px 0;
-    width: 100%;
-
-    font-weight: 700;
-    font-size: 15px;
-    line-height: 19px;
-    letter-spacing: 2px;
-    color: #ffffff;
-    outline: none;
-    border: none;
-    cursor: pointer;
-    padding-top: 15px;
-    padding-bottom: 11px;
-    transition: 0.2s ease-in-out;
-
-    &:active {
-      transform: scale(0.98);
-    }
-
-    text-transform: uppercase;
-    &:hover {
-      background: #ffffff;
-      color: #fc7614;
-    }
-  }
 
   .circles {
     display: flex;
@@ -85,6 +56,39 @@
     &:active {
       transform: scale(0.98);
     }
+  }
+  .star {
     margin-bottom: 30px;
+    pointer-events: none;
+  }
+
+  .button {
+    background: #fc7614;
+    border-radius: 22.5px;
+    font-family: 'Overpass';
+    padding: 15px 0;
+    width: 100%;
+
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 19px;
+    letter-spacing: 2px;
+    color: #ffffff;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    padding-top: 15px;
+    padding-bottom: 11px;
+    transition: 0.2s ease-in-out;
+
+    &:active {
+      transform: scale(0.98);
+    }
+
+    text-transform: uppercase;
+    &:hover {
+      background: #ffffff;
+      color: #fc7614;
+    }
   }
 }
